<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:background="@android:color/transparent"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        >

        <item
            android:id="@+id/menu_upcoming"
            android:icon="@drawable/ic_upcoming"
            android:title="@string/Upcoming"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_history"
            android:icon="@drawable/ic_history"
            android:title="@string/History"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_myPlaces"
            android:icon="@drawable/ic_favorite_full"
            android:title="@string/MyPlaces"
            app:showAsAction="always" />


        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/Profile"
            app:showAsAction="always"
            />

        <item
            android:id="@+id/menu_logout"
            android:title="@string/LogOut"
            android:icon="@drawable/ic_logout"
            app:showAsAction="always"
            />

    </group>


</menu>