<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:background="@android:color/transparent"
    >

    <item
        android:id="@+id/menu_upcoming"
        android:icon="@drawable/ic_upcoming"
        android:title="@string/Upcoming"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_history"
        android:title="@string/History"
        app:showAsAction="always" />

    <item
        android:id="@+id/holder1"
        android:title=""
        app:showAsAction="always"
        android:enabled="false"
        />

    <item
        android:id="@+id/menu_myPlaces"
        android:icon="@drawable/ic_favorite"
        android:title="@string/MyPlaces"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/Profile"
        app:showAsAction="always"
        />









</menu>