<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ProfileFragment">

    <ImageView
        android:id="@+id/Profile_IMG_Icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="top|center"
        android:src="@drawable/ic_logo" />



    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:clipToPadding="false"
        android:paddingBottom="65dp"
        android:layout_marginTop="200dp"
        >



        <LinearLayout
            android:id="@+id/Profile_ProfilePage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/Profile_TopProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/Profile_IMG_User"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/img_profile_pic"
                    app:civ_border_color="@color/mainGreen"
                    app:civ_border_width="3dp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/Profile_LBL_UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/userName"
                    android:textColor="@color/mainGreen"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/mainGreen" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/Profile_FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person"
                    app:tint="@color/mainGreen"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/firstName"
                    android:textColor="@color/mainGreen"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/Profile_LBL_UserFirstName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/userFirstName"
                    android:textColor="@color/menuGreen"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:background="@color/mainGreen" />


            <LinearLayout
                android:id="@+id/Profile_LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person"
                    app:tint="@color/mainGreen"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/lastName"
                    android:textColor="@color/mainGreen"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/Profile_LBL_UserLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/userLastName"
                    android:textColor="@color/menuGreen"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:background="@color/mainGreen" />

            <LinearLayout
                android:id="@+id/Profile_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_email"
                    app:tint="@color/mainGreen"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/email"
                    android:textColor="@color/mainGreen"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/Profile_LBL_UserEmail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:text="@string/userEmail"
                    android:textColor="@color/menuGreen"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:background="@color/mainGreen" />




            <com.google.android.material.button.MaterialButton
                android:id="@+id/Profile_BTN_EditProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/mainGreen"
                android:scaleType="fitCenter"
                android:singleLine="true"
                android:text="@string/editProfile"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="OnClick"
                />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</FrameLayout>