<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingDefaultResource">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dialog_List_LBL_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RatingTrip"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/mainGreen"
                android:textSize="24sp" />



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/dialog_LST_Questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/dialog_Layout_Rate"
                android:layout_below="@+id/dialog_List_LBL_title"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:id="@+id/dialog_Layout_Rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dialog_BTN_Rate"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/mainGreen"
                    android:fontFamily="@font/roboto_bold"
                    android:scaleType="fitCenter"
                    android:singleLine="true"
                    android:text="@string/UpdateRate"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="OnClick" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/dialog_BTN_Skip"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/mainGreen"
                    android:fontFamily="@font/roboto_bold"
                    android:scaleType="fitCenter"
                    android:singleLine="true"
                    android:text="@string/SkipRate"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:ignore="OnClick" />

            </LinearLayout>



        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>