<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.CreateNewTripActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/mainGreen"
        app:liftOnScroll="true"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/CreateTrip_toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mainGreen"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:navigationIconTint="@color/white"
            app:title= "@string/createNewTrip"
            app:titleTextColor="@color/white"


            />

    </com.google.android.material.appbar.AppBarLayout>



    <ImageView
        android:id="@+id/CreateTrip_IMG_Icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="?actionBarSize"
        android:src="@drawable/ic_logo" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/CreateTrip_ScrollPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/CreateTrip_IMG_Icon"
        android:layout_marginBottom="20dp"
        android:clipToPadding="false"
        android:paddingBottom="20dp">

        <LinearLayout
            android:id="@+id/CreateTrip_Layout_CreateTripPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:id="@+id/createTrip_TIN_destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:outlineAmbientShadowColor="@color/mainGreen"
                android:outlineSpotShadowColor="@color/mainGreen"
                android:padding="5dp"
                android:textColorHint="@color/menuGreen"
                app:boxStrokeColor="@color/menuGreen"
                app:boxStrokeWidth="2dp"
                app:hintTextColor="@color/menuGreen"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_location"
                app:startIconTint="@color/menuGreen">


                <AutoCompleteTextView
                    android:id="@+id/createTrip_AutoCompleteTextViewDestination"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:inputType="none"
                    android:text="@string/destination"
                    android:textColor="@color/menuGreen" />

            </com.google.android.material.textfield.TextInputLayout>


            <!--        <com.google.android.material.textfield.TextInputLayout-->
            <!--            android:id="@+id/createTrip_TIN_destination"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:layout_marginTop="15dp"-->
            <!--            android:layout_marginStart="32dp"-->
            <!--            android:layout_marginEnd="32dp"-->
            <!--            android:hint="@string/destination"-->
            <!--            android:padding="5dp"-->
            <!--            android:textColor="@color/black"-->
            <!--            android:textColorHint="@color/menuGreen"-->
            <!--            app:boxBackgroundColor="@color/white">-->

            <!--            <com.google.android.material.textfield.TextInputEditText-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content" />-->

            <!--        </com.google.android.material.textfield.TextInputLayout>-->

            <LinearLayout
                android:id="@+id/CreateTrip_dateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createTrip_TIN_StartDate"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/startDate"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/menuGreen"
                    app:boxBackgroundColor="@color/white"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createTrip_TIN_EndDate"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/endDate"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/menuGreen"
                    app:boxBackgroundColor="@color/white"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"/>

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createTrip_BTN_Create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="260dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/mainGreen"
                android:fontFamily="@font/roboto_bold"
                app:icon="@drawable/ic_add"
                android:scaleType="fitCenter"
                android:singleLine="true"
                android:text="@string/create"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="OnClick" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>